--- a/yes.html
+++ b/yes.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Yeeyy ! Finally</h1>
+        <h1 class="header_text">Yeeyy ! Finally luckyy hehe</h1>
       </div>
       <div class="gif_container">
         <img
