--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1 class="header_text">Do you wanna go out with me? Bakaa </h1>
       </div>
       <p>
-        <a href="https://www.instagram.com/developer_faizan//">@developer_faizan</a>
+        <a href="https://www.instagram.com/developer_faizan//">your dumbo bakaa</a>
       </p>
       <div class="gif_container">
         <img
