--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Do you wanna go out with me? Bakaa </h1>
+        <h1 class="header_text">Do you wanna go out with me a date? Bakaa </h1>
       </div>
       <p>
         <a href="https://www.instagram.com/sahil.akatsuki//">your dumbo bakaa</a>
