--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1 class="header_text">Do you wanna go out with me a date? Bakaa </h1>
       </div>
       <p>
-        <a href="https://www.instagram.com/sahil.akatsuki//">your dumbo bakaa</a>
+        <a href="https://www.instagram.com/baka.u.pvt//">your dumbo bakaa</a>
       </p>
       <div class="gif_container">
         <img
