--- a/index.html
+++ b/index.html
@@ -1,52 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>my chocolateeee</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div>
-        <h1 class="header_text">Do you wanna go out with me a date? Bakaa </h1>
-      </div>
-      <p>
-        <a href="https://www.instagram.com/baka.u.pvt//">your dumbo bakaa</a>
-      </p>
-      <div class="gif_container">
-        <img
-          src="https://i.postimg.cc/pdNqPxx1/milk-and-mocha-cute.gif"
-          alt="Cute animated illustration"
-        />
-      </div>
-      <div class="buttons">
-        <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
-        <button
-          class="btn"
-          id="noButton"
-          onmouseover="moveButton()"
-          onclick="moveButton()"
-        >
-          No
-        </button>
-
-        <script>
-          function nextPage() {
-            window.location.href = "yes.html";
-          }
-
-          function moveButton() {
-            var x =
-              Math.random() *
-              (window.innerWidth -
-                document.getElementById("noButton").offsetWidth);
-            var y =
-              Math.random() *
-              (window.innerHeight -
-                document.getElementById("noButton").offsetHeight);
-            document.getElementById("noButton").style.left = `${x}px`;
-            document.getElementById("noButton").style.top = `${y}px`;
-          }
-        </script>
-      </div>
+    <div class="discontinued"></div>
+    <div class="main">
+      <p>I have Something <a href="new.html">Click Here</a></p>
     </div>
   </body>
 </html>
